--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     ]
   },
   "devDependencies": {
-    "@types/three": "^0.159.0"
+    "@types/three": "^0.159.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6"
   }
 }
