--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/three": "^0.159.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
